--- a/mooringlicensing/frontend/mooringlicensing/package.json
+++ b/mooringlicensing/frontend/mooringlicensing/package.json
@@ -9,24 +9,23 @@
     "serve": "vue-cli-service serve"
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
     "@vue/cli-service": "^5.0.8",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.4.1",
-    "datatables.net-buttons-bs": "^2.4.3",
-    "datatables.net-responsive-bs": "^2.4.1",
-    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "@vue/compat": "^3.5.13",
+    "datatables.net-buttons-bs": "^3.2.3",
+    "datatables.net-responsive-bs": "^3.0.4",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.49",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
-    "jszip": "3.10.0",
+    "jquery-validation": "^1.21.0",
+    "jszip": "^3.10.1",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "moment-range": "^3.0.3",
-    "select2": "^4.0.3",
+    "moment-range": "^4.0.2",
+    "select2": "^4.1.0-rc.0",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
-    "sweetalert2": "^6.6.5",
-    "vue": "^2.7.16",
-    "vue-resource": "^1.3.3",
-    "vue-router": "^2.3.1",
+    "sweetalert2": "^11.4.8",
+    "vue": "^3.5.13",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^4.5.1",
     "vuedraggable": "^2.24.3"
   },
   "browserslist": [
@@ -35,13 +34,6 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "jquery-validation": "^1.21.0",
-    "postcss-loader": "^8.1.1",
-    "pretty": "^2.0.0",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "@vue/compiler-sfc": "^3.5.13"
   }
 }
